      to Norbert Preining.  (Closes: #743754).
    + [BR] Fix another false positives in GFDL detection.
  * checks/files.pm:
    + [BR] Use Lintian::Data for detecting embedded library.
    + [BR] Add context in embedded lib tagging.
  * checks/fields.{desc,pm}:
    + [NT] Apply patch from Johannes Schauer to rename "notest"
      build-profile to "nocheck".  (Closes: #743840)
  * checks/init.d.{desc,pm}:
    + [BR] Detect $all virtual dependency in legacy init scripts.
      Thanks to Holger Levsen.  (Closes: #737867).
  * checks/java.{desc,pm}:
    + [SL] Do not trigger a warning when a jar is not in
      /usr/share/java and the package name matches
      lib.*maven.*plugin.*java.  (Closes: #743446).
    + [SL] Catch uses of Java8 byte code.  (Closes: #743384).
    + [SL] Warn that the suggests/recommends on libservlet[\d\.]+-java is
      needless (Closes: #743453)

  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of polarssl.
    + [RG] Don't detect mariadb as embedder of mysql.
  * data/java/constants:
    + [SL] introduce this file to specify JDK values

  * debian/control:
    + [NT] Add Build-Depends on po4a.
  * debian/lintian.install:
    + [NT] Install translations.
  * debian/rules:
    + [NT] Add rules for handling translations.

  * frontend/lintian{,-info}:
    + [NT] Use localized version of tag descriptions.
      (Closes: #663155)

  * lib/Lintian/{CheckScript,Profile}.pm:
    + [NT] Add support for translations of tag descriptions.

  * po4a:
    + [NT] New directory for translations.

  * private/private/gen-po4a-conf:
    + [NT] New file.

  * README:
    + [NT] Document how to make and contribute translations.

 -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 31 Mar 2014 18:52:04 +0200

lintian (2.5.22.1) unstable; urgency=medium

  * checks/ocaml.{desc,pm}:
    + [NT] Replace unnecessary uses of file_info with index.

  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of libmpg123.