@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9), bd-conflict, revision-1 (>= 1.0-1),
  xorg-dev, java-propose-classpath, python3.2-dev, foo [all],
  bar [i386 any], baz [source i3!86], baz [i386 !amd64],
  other-pkg [kfreebsd-any], yet-another [any-powerpc],
- packaging-dev, libdb5.1++-dev, libdb5.1-java-dev
+ packaging-dev, libdb5.1++-dev, libdb5.1-java-dev, hardening-wrapper
 Build-Conflicts:
  bd-conflict,
 
