@@ -17,6 +17,7 @@ lintian (2.5.22.2) UNRELEASED; urgency=medium
   * checks/fields.{desc,pm}:
     + [NT] Apply patch from Johannes Schauer to rename "notest"
       build-profile to "nocheck".  (Closes: #743840)
+    + [NT] Support giving replacements for obsolete packages.
   * checks/init.d.{desc,pm}:
     + [BR] Detect $all virtual dependency in legacy init scripts.
       Thanks to Holger Levsen.  (Closes: #737867).
@@ -31,6 +32,9 @@ lintian (2.5.22.2) UNRELEASED; urgency=medium
   * data/binary/embedded-libs:
     + [RG] Detect embedded copies of polarssl.
     + [RG] Don't detect mariadb as embedder of mysql.
+  * data/fields/obsolete-packages:
+    + [NT] Add hardening-includes and hardening-wrapper on request of
+      Thijs Kinkhorst.  (Closes: #711193)
   * data/java/constants:
     + [SL] introduce this file to specify JDK values
 
